Added content and fixes

--- a/index.html
+++ b/index.html
@@ -92,6 +92,54 @@
             <div class="col-lg-5 col-12 text-center">
                 <div class="card mb-2 rounded-3 shadow">
                     <div class="card-header py-3 bg-info-subtle">
+                        <h6 class="my-0">2021 Global NASH Market</h6>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title">~$1.57<small class="text-body-secondary fw-light">Bn</small></h1>
+                        <div class="fst-italic">Projected to reach <span class="fw-bold">$21.87</span>Bn by 2028 with a CAGR of 60.4% from 2022 to 2028.
+                        </div>
+                    </div>
+                    <div class="card-footer bg-primary-subtle">
+                        <div><small>Vantage Market Research</small></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-5 col-12 text-center">
+                <div class="card mb-2 rounded-3 shadow">
+                    <div class="card-header py-3 bg-info-subtle">
+                        <h6 class="my-0">2022 Global NASH Treatment Market</h6>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title">~$1.13<small class="text-body-secondary fw-light">Bn</small></h1>
+                        <div class="fst-italic">Forecast revenue to reach <span class="fw-bold">$15.95</span>Bn by 2030 with expected CAGR of 39.2% from 2022 to 2030.
+                        </div>
+                    </div>
+                    <div class="card-footer bg-primary-subtle">
+                        <div><small>Great View Research</small></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-5 col-12 text-center">
+                <div class="card mb-2 rounded-3 shadow">
+                    <div class="card-header py-3 bg-info-subtle">
+                        <h6 class="my-0">2022 Global NASH Revenue Forecast</h6>
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title">~$2.51<small class="text-body-secondary fw-light">Bn</small></h1>
+                        <div class="fst-italic">Forecast to reach <span class="fw-bold">$108.42</span>Bn by 2030 with a CAGR of 60.1% from 2023 to 2030.
+                        </div>
+                    </div>
+                    <div class="card-footer bg-primary-subtle">
+                        <div><small>Vantage Market Research</small></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-5 col-12 text-center">
+                <div class="card mb-2 rounded-3 shadow">
+                    <div class="card-header py-3 bg-info-subtle">
                         <h6 class="my-0">2022 Global NASH Market</h6>
                     </div>
                     <div class="card-body">
@@ -108,14 +156,14 @@
             <div class="col-lg-5 col-12 text-center">
                 <div class="card mb-2 rounded-3 shadow">
                     <div class="card-header py-3 bg-info-subtle">
-                        <h6 class="my-0">2022 Global NASH Market Value</h6>
+                        <h6 class="my-0">2022 Global NASH Market</h6>
                     </div>
                     <div class="card-body">
                         <h1 class="card-title">~$17<small class="text-body-secondary fw-light">Bn</small></h1>
                         <div class="fst-italic">Expected to expand at a CAGR of 39%, reaching <span class="fw-bold">$123</span>Bn by 2028.</div>
                     </div>
                     <div class="card-footer bg-primary-subtle">
-                        <div><small>Industry Report 2023</small></div>
+                        <div><small>Industry Report</small></div>
                     </div>
                 </div>
             </div>
@@ -130,7 +178,7 @@
                         <div class="fst-italic">Expected to expand at a CAGR of 5% over the next 10 years, reaching <span class="fw-bold">$32.5</span>Bn by 2032.</div>
                     </div>
                     <div class="card-footer bg-primary-subtle">
-                        <div><small>Future Market Insights 2023</small></div>
+                        <div><small>Future Market Insights</small></div>
                     </div>
                 </div>
             </div>
