--- a/landscape.html
+++ b/landscape.html
@@ -68,109 +68,109 @@
                     <td>Pegozafermin</td>
                     <td>89bio</td>
                     <td>THR-β</td>
-                    <td>1.29B</td>
+                    <td>1.14B</td>
                 </tr>
                 <tr>
                     <td>Lanifibranor</td>
                     <td>AbbVie</td>
                     <td class="text-primary">Partnership</td>
-                    <td>259.3B</td>
+                    <td>271.1B</td>
                 </tr>
                 <tr>
                     <td>Efruxiferimin</td>
                     <td>Akero </td>
                     <td>FGF21</td>
-                    <td>2.76B</td>
+                    <td>2.70B</td>
                 </tr>
                 <tr>
                     <td>Pemvidutide</td>
                     <td>Altimmune</td>
                     <td>GLP-1</td>
-                    <td>133.3M</td>
+                    <td>142.2M</td>
                 </tr>
                 <tr>
                     <td>Efruxifermin</td>
                     <td>Amgen</td>
                     <td class="text-primary">Licensed Out</td>
-                    <td>137.1B</td>
+                    <td>145.2B</td>
                 </tr>
                 <tr>
                     <td>Tirzepatide</td>
                     <td>Eli Lilly</td>
                     <td>GLP-1</td>
-                    <td>526.1B</td>
+                    <td>540.7B</td>
                 </tr>
                 <tr class="table-danger">
                     <td>Elafibranor</td>
                     <td>Genfit</td>
                     <td class="text-danger">Dropped</td>
-                    <td>177.6M</td>
+                    <td>190.3M</td>
                 </tr>
                 <tr>
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
                     <td>Cyclophilin</td>
-                    <td>28.6M</td>
+                    <td>21.1M</td>
                 </tr>
                 <tr class="table-danger">
                     <td>Emricasan</td>
                     <td>Histogen</td>
                     <td class="text-danger">Dropped</td>
-                    <td>2.89M</td>
+                    <td>2.15M</td>
                 </tr>
                 <tr class="table-danger">
                     <td class="cancel">Obeticholic</td>
                     <td>Intercept</td>
                     <td class="text-danger">Dropped</td>
-                    <td>452.5M</td>
+                    <td>452.1M</td>
                 </tr>
                 <tr>
                     <td>Lanifibranor</td>
                     <td>Inventiva</td>
                     <td>PPAR</td>
-                    <td>146.4M</td>
+                    <td>186.5M</td>
                 </tr>
                 <tr class="table-danger">
                     <td>ARO-PNPLA3</td>
                     <td>J&J</td>
                     <td class="text-danger">Dropped</td>
-                    <td>389.3B</td>
+                    <td>392.2B</td>
                 </tr>
                 <tr>
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
                     <td>THR-β</td>
-                    <td>3.32B</td>
+                    <td>2.98B</td>
                 </tr>
                 <tr>
                     <td>Aldafermin</td>
                     <td>NGM Bio</td>
                     <td>FGF19</td>
-                    <td>156.6M</td>
+                    <td>100.9M</td>
                 </tr>
                 <tr>
                     <td>Semaglutide</td>
                     <td>Novo Nordisk</td>
                     <td>GLP-1R</td>
-                    <td>318.7B</td>
+                    <td>161.4B</td>
                 </tr>
                 <tr>
                     <td>TVB-2640</td>
                     <td>Sagimet</td>
                     <td>FASN</td>
-                    <td>257.9M</td>
+                    <td>247.7M</td>
                 </tr>
                 <tr>
                     <td>TERN-501</td>
                     <td>Terns</td>
                     <td>THR-β</td>
-                    <td>321.8M</td>
+                    <td>312.6M</td>
                 </tr>
                 <tr>
                     <td>VK2809</td>
                     <td>Viking </td>
                     <td>FGF21</td>
-                    <td>1.38B</td>
+                    <td>1.35B</td>
                 </tr>
 
 
@@ -184,25 +184,25 @@
                     <td>ALG-055009</td>
                     <td>Aligos</td>
                     <td>THR-β</td>
-                    <td>37.2M</td>
+                    <td>34.4M</td>
                 </tr>
                 <tr>
                     <td>ARO-PNPLA3</td>
                     <td>Arrowhead</td>
                     <td>RNAi</td>
-                    <td>2.96B</td>
+                    <td>2.90B</td>
                 </tr>
                 <tr>
                     <td>AZD2693</td>
                     <td>AstraZeneca</td>
                     <td>LICA</td>
-                    <td>207B</td>
+                    <td>207.6B</td>
                 </tr>
                 <tr>
                     <td>AXA1125</td>
                     <td>Axcella Health</td>
                     <td>Amino Acids</td>
-                    <td>17M</td>
+                    <td>30.5M</td>
                 </tr>
                 <tr>
                     <td>Survodutide</td>
@@ -214,19 +214,19 @@
                     <td>BOS-580</td>
                     <td>Boston</td>
                     <td>FGF21</td>
-                    <td>78.98B</td>
+                    <td>79.21B</td>
                 </tr>
                 <tr>
                     <td>BMS-986263</td>
                     <td>Bristol-Myers Squibb</td>
                     <td>HSP47</td>
-                    <td>128.7B</td>
+                    <td>122.8B</td>
                 </tr>
                 <tr>
                     <td>Caspase-6</td>
                     <td>Elgia</td>
                     <td>Cysteine Pro.</td>
-                    <td>220.1M</td>
+                    <td>Private</td>
                 </tr>
                 <tr>
                     <td>Vonafexor</td>
@@ -238,19 +238,19 @@
                     <td>Belapectin</td>
                     <td>Galectin</td>
                     <td>Gal-3</td>
-                    <td>104.2M</td>
+                    <td>115.5M</td>
                 </tr>
                 <tr>
                     <td>GB1211</td>
                     <td>Galecto</td>
                     <td>Gal-3</td>
-                    <td>16.4M</td>
+                    <td>15.5M</td>
                 </tr>
                 <tr>
                     <td>Aramchol</td>
                     <td>Galmed</td>
                     <td>FABAC</td>
-                    <td>3.08M</td>
+                    <td>2.4M</td>
                 </tr>
                 <tr>
                     <td>BFKB8488A</td>
@@ -262,13 +262,13 @@
                     <td>Cilofexor</td>
                     <td>Gilead</td>
                     <td>FXR</td>
-                    <td>95.3B</td>
+                    <td>94.4B</td>
                 </tr>
                 <tr>
                     <td>GSK-4532990</td>
                     <td>GSK</td>
                     <td>iRNA</td>
-                    <td>71.6B</td>
+                    <td>77.4B</td>
                 </tr>
                 <tr>
                     <td>HX-001</td>
@@ -280,37 +280,37 @@
                     <td>HTD1801</td>
                     <td>Hightide</td>
                     <td>Hypolipidemic</td>
-                    <td>145.6M</td>
+                    <td>185.7M</td>
                 </tr>
                 <tr>
                     <td>LPCN-1144</td>
                     <td>Lipocine</td>
                     <td>TU</td>
-                    <td>21M</td>
+                    <td>17.1M</td>
                 </tr>
                 <tr>
                     <td>MN-001</td>
                     <td>Medicinova</td>
                     <td>Multi-Target</td>
-                    <td>119.6M</td>
+                    <td>102.5M</td>
                 </tr>
                 <tr>
                     <td>MK-6024</td>
                     <td>Merck & Co</td>
                     <td>GLP-1</td>
-                    <td>276.5B</td>
+                    <td>272.3B</td>
                 </tr>
                 <tr>
                     <td>DA-1241</td>
                     <td>NeuroBo</td>
                     <td>GPR119</td>
-                    <td>17.1M</td>
+                    <td>20.2M</td>
                 </tr>
                 <tr>
                     <td>Ervogastat</td>
                     <td>Pfizer</td>
                     <td>DGAT2</td>
-                    <td>199.7B</td>
+                    <td>189.8B</td>
                 </tr>
             </tbody>
         </table>
