--- a/article.html
+++ b/article.html
@@ -63,6 +63,19 @@
 
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-primary d-flex align-items-center article-card shadow">
+                        <img src="images/89bio.jpeg" class="img-fluid">
+                        <div class="card-body text-center d-flex flex-column justify-content-between">
+                            <p class="card-text">89bio Announces U.S. FDA has Granted Breakthrough Therapy Designation for Pegozafermin in NASH.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="https://ir.89bio.com/news-releases/news-release-details/89bio-announces-us-fda-has-granted-breakthrough-therapy" class="btn btn-primary w-25" target="_blank">Read</a>
+                                <small class="text-body-secondary">September 21, 2023</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-primary d-flex align-items-center article-card shadow">
                         <img src="images/inventiva.jpeg" class="img-fluid">
                         <div class="card-body text-center d-flex flex-column justify-content-between">
                             <p class="card-text">Inventiva and Hepalys Pharma, Inc. announce exclusive licensing agreement to develop and commercialize lanifibranor in Japan and South Korea.</p>
