--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container my-4">
         <div class="row gap-4 justify-content-center text-center">
-            <div class="card col-4 bg-warning-subtle">
+            <div class="card col-lg-4 col-12 bg-warning-subtle">
                 <div class="card-body">
                     <h5 class="card-title h3">P2 ALTITUDE-NASH</h5>
                     <p class="card-text">A Phase 2 MASH clinical trial, 4 months duration, three arm trial. A clinical collaboration with HepQuant. <br><br>Trial results released - 5/22/2023</p>
@@ -67,7 +67,7 @@
                     <a href="https://hepionpharma.com/news/hepion-pharmaceuticals-announces-major-reductions-in-liver-stiffness-with-rencofilstat-treatment-in-17-week-phase-2-study-of-advanced-f3-mash-liver-disease/" target="_blank" class="card-link">Additional Data-Fibroscan</a>
                 </div>
             </div>
-            <div class="card col-4 bg-warning-subtle">
+            <div class="card col-lg-4 col-12 bg-warning-subtle">
                 <div class="card-body">
                     <h5 class="card-title h3">P2B ASCEND-NASH</h5>
                     <p class="card-text">A Phase 2B MASH clinical trial, 12 months duration, four arm trial. Trial population of 336 subjects with subject population consists of F2/F3, includes 60 days screening.<br><br>Conducted first DSMB safety interim - 6/15/2023</p>
