--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- DIVIDER -->
 
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center text-center">
+        <div class="row gap-4 justify-content-center text-center px-3">
             <div class="card col-lg-4 col-12 bg-warning-subtle">
                 <div class="card-body">
                     <h5 class="card-title h3">P2 ALTITUDE-NASH</h5>
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="container my-4 p-0">
+    <div class="container my-4 px-3">
         <table class="table table-dark text-center">
             <thead>
                 <tr>
@@ -142,7 +142,7 @@
     </div>
 
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center">
+        <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-5 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
                 <div class="card-body bg-info-subtle">
@@ -167,7 +167,7 @@
     </div>
 
     <div class="container my-4">
-        <div class="row">
+        <div class="row px-3">
             <div class="card col-lg-10 col-12 p-0 bg-warning-subtle mx-auto">
                 <div class="card-header fw-bold">PR - September 21, 2023</div>
                 <div class="card-body">
@@ -178,7 +178,7 @@
         </div>
     </div>
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center">
+        <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
                 <div class="card-body bg-info-subtle">
@@ -193,7 +193,7 @@
         </div>
     </div>
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center">
+        <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-5 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
                 <div class="card-body bg-info-subtle">
@@ -221,7 +221,7 @@
         </div>
     </div>
 
-    <div class="container my-4 px-5">
+    <div class="container my-4 px-5 px-3">
         <table class="table table-dark text-center">
             <thead>
                 <tr>
@@ -271,7 +271,7 @@
     </div>
 
     <div class="container my-4">
-        <div class="row gap-4 justify-content-center">
+        <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
                 <div class="card-body bg-info-subtle">
