--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="card-header bg-info fw-bold">Speculations</div>
                 <div class="card-body bg-info-subtle">
                     <h5 class="card-title">Quarterly - Thoughts</h5>
-                    <p class="card-text">- First half of 2023, $23M EQ equity has been dispense which equivalent to the outstanding level. Keep in mind 5 months have already past as of November 2023, therefore, we're in very critical levels with estimation ~$13M (Factoring latest PO).<br><br>
+                    <p class="card-text">- First half of 2023, $23M EQ equity has been dispense which equivalent to the outstanding level. Keep in mind 5 months have already past as of November 2023, therefore, we're in very critical levels with estimation ~$16M (Factoring latest PO).<br><br>
                         - As per restriction due to IB6, they have a maximum offerring potential of ~$24M. In which, ~$15M has already been allocated; ~$5M in stocks and ~$10M in warrants as per their offering.</p><br>
                     - As per IB6, the restriction also have a duration of 12 months. Given the offering closed in October 2023, it would implied possible offering amounting of the remaining ~$9M from now to October 2024.<br><br>
                     - Also need to take in consideration that, as warrants exercised, the OS will increased and will drastically decrease the SP needed to satisfy the $75M MC condition. Once lifted, their ability to raise substantial capital will greatly increase and with no more limitations.
@@ -281,6 +281,21 @@
                         - With the known 70 subjects recruited for ALTITUDE, we can assume ~196 subjects were dosed from ASCEND. Given the ADME trial have never been disclosed to public, they may or may not been added to the total subjects dosed.<br><br>
                         - If we calculate, following their treatment to placebo ratio of 1:1:1:1, then the estimation of subjects currently enrolled into ASCEND is between ~253 to ~261 subjects or ~257 as average.<br><br>
                         - This information on the CP has not been updated since roughly April/May 2023. Would speculate they are somewhat near full enrollment if not yet completed. Given DBL, they may be blinded until everything is done and due.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container my-4">
+        <div class="row gap-4 justify-content-center px-3">
+            <div class="card col-lg-10 col-12 p-0 text-center">
+                <div class="card-header bg-info fw-bold">Speculations</div>
+                <div class="card-body bg-info-subtle">
+                    <h5 class="card-title">Past Events - Thoughts</h5>
+                    <p class="card-text">
+                        <span class="text-danger">Reverse Split</span> > This is a complicated one, given how we already know how things played out. HEPA at the time had insufficient unissued shares remaining, this came after many failed attempts to increase. Added on, was the obviously SP under the minimum bid price of $1. The main catalyst of the time was anticipation of ALTITUDE topline data to support the SP back into NASDAQ compilance. This fell short, given they had already decided to R/S roughtly a week prior.<br>
+                        <span class="text-danger">This was actually very disappointing given how this unfolded. As stated, their deadline for their second extension ends on May 30th, and topline data were released May 22nd. By R/S, HEPA has secured themselves by sacrificing investors.<br>The main reasons that support HEPA's decision to R/S are; #1 To increased unissued shares, #2 Regain compliance, and #3 To raise a substantial offering with the availablity of unissued shares.<br>This is followed by a series of tragic events; #1 SP immediately plunged substantially, #2 Due to the plunge a week prior, ALTITUDE topline data did not support the SP higher than 75M MC, and #3 They did not immediately construct an offering or contingency plan to stabilize the SP which further plunged downward. </span><br><br>
+                        <span class="text-danger">Rencofilstat's Data</span> > Pre-clinical and clinical studies have long proven Rencofilstat's place in MASH. The discussion is no longer the question of efficacy or safety, given they have already amassed and continue accumulating evidences. In short, Rencofilstat's efficacy is shown to be the greatest in late-stages of MASH, having the highest and greatest response and reductions. This gives Rencofilstat an edge over competitors who have only shown efficacy in early to mid stages of MASH. <br>Afterall, it's my beliefs that future treatments will be categories based on patients population. In other words, no one drug will dominate the market and be used for all stages of MASH, instead it will be divided by many drugs responsible for the different stages of MASH.<br><br>Based on the current outlook, given how Diabetes and MASLD/NASH are closely interlinked, early-mid stage of MASH will likely be saturated with GLP drugs/medication. This come from the aftermath of many successful GLP trial results with astounding results in liver fat reduction, which plays a pivotal role in early stages of MASH. With that being said, I see GLPs and Rencofilstat both at their respective end of the spectrum in MASH.
                 </div>
             </div>
         </div>
