--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- BS JS Stylesheet -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
+    <script src="script.js" defer></script>
 
 </head>
 
@@ -57,7 +58,7 @@
     </nav>
     <!-- DIVIDER -->
 
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center text-center px-3">
             <div class="card col-lg-4 col-12 bg-warning-subtle">
                 <div class="card-body">
@@ -76,7 +77,7 @@
         </div>
     </div>
 
-    <div class="container my-4 px-3">
+    <div class="container my-4 px-3 access">
         <table class="table table-dark text-center">
             <thead>
                 <tr>
@@ -141,7 +142,7 @@
         </table>
     </div>
 
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-5 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
@@ -166,7 +167,7 @@
         </div>
     </div>
 
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row px-3">
             <div class="card col-lg-10 col-12 p-0 bg-warning-subtle mx-auto">
                 <div class="card-header fw-bold">PR - September 21, 2023</div>
@@ -177,7 +178,7 @@
             </div>
         </div>
     </div>
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
@@ -192,7 +193,7 @@
             </div>
         </div>
     </div>
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-5 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
@@ -221,7 +222,7 @@
         </div>
     </div>
 
-    <div class="container my-4 px-5 px-3">
+    <div class="container my-4 px-5 px-3 access">
         <table class="table table-dark text-center">
             <thead>
                 <tr>
@@ -270,7 +271,7 @@
         </table>
     </div>
 
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
@@ -286,7 +287,7 @@
         </div>
     </div>
 
-    <div class="container my-4">
+    <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header bg-info fw-bold">Speculations</div>
@@ -301,9 +302,20 @@
         </div>
     </div>
 
+    <div class="container m-4 p-4 mx-auto">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="key" placeholder="Access Password" aria-label="Password">
+                    <input class="btn btn-primary" id="keyBtn" type="button" value="Submit">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <footer class="py-3 mt-5 mb-3">
+
+    <footer class="py-3 mt-5 mb-3 access">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Homepage</a></li>
             <li class="nav-item"><a href="hepion.html" class="nav-link px-2 text-body-secondary">Hepion</a></li>
