--- a/index.html
+++ b/index.html
@@ -243,6 +243,36 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>SAD</td>
+                    <td>24</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>MAD</td>
+                    <td>25</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>DDI</td>
+                    <td>18(6)</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Food Study</td>
+                    <td>44</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Phase 2A 75MG</td>
+                    <td>12(6)</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Phase 2A 225MG</td>
+                    <td>17(3)</td>
+                    <td></td>
+                </tr>
+                <tr>
                     <td><a href="https://s3.amazonaws.com/sec.irpass.cc/2652/0001104659-22-065556.htm" target="_blank" class="text-warning">CP May 2022</a></td>
                     <td></td>
                     <td>159</td>
