--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
             <tbody>
                 <tr>
                     <td>SAD</td>
-                    <td>24</td>
+                    <td>24(6)</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>MAD</td>
+                    <td>MAD(2?)</td>
                     <td>25</td>
                     <td></td>
                 </tr>
