--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td>MAD(2?)</td>
-                    <td>25</td>
+                    <td>MAD</td>
+                    <td>25(2?)</td>
                     <td></td>
                 </tr>
                 <tr>
