--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <h5 class="card-title h3">P2B ASCEND-NASH</h5>
                     <p class="card-text text-start">A Phase 2B MASH clinical trial, 12 months duration, four arm trial. A trial population with expected 336 subjects consisted of F2/F3, 60 days screening.</p>
                     <p class="card-text text-start"> ✅ 8/31/22 [Trial Initiation]:<br>Phase 2B MASH Trial, Initiation Of Dosing.</p>
+                    <p class="card-text text-start"> ✅ 11/8/22 [Subject]:<br>First Subject Dosed.</p>
                     <p class="card-text text-start"> ✅ 6/15/23 [First DSMB Meeting]:<br>Passing Of Key Safety Milestone.</p>
                     <p class="card-text text-start"> 🚫 TBD [Enrollment Completion]</p>
                     <p class="card-text text-start"> 🚫 TBD [First Interim Analysis]</p>
@@ -314,6 +315,30 @@
     <div class="container my-4 access">
         <div class="row gap-4 justify-content-center px-3">
             <div class="card col-lg-10 col-12 p-0 text-center">
+                <div class="card-header fw-bold bg-warning">Caclulations</div>
+                <div class="card-body">
+                    <h5 class="card-title">ASCEND Enrollment - In Depth</h5>
+                    <p class="card-text">
+                        First subjects dosed 11/8/22.<br><br>
+                        First DSMB Meeting PR 6/15/23 (exact date for simplistic); 12/17/22 (last subject began dosing of the 34/cohort).<br><br>
+                        Assume DSMB Meeting conducted under the conditon of, 34/cohort or (136 total subjects) for 180 days.<br><br>
+                        As per May CP, ~190-196 subjects dosed. Combined subjects of three arms: 75mg, 150mg, & 225mg. Equivalent to roughtly 64/cohort of treatment.<br><br>
+                        Roughly around June 2023 when DSMB Meeting was conducted, the speculation that can be made at the very least are:<br>
+                        - ~224-230 total subjects. (~190-196 + 34 placebo)<br>
+                        - ~136 subjects have completed 180 days. (As per first DSMB meeting condition) <br>
+                        - From 12/2022 to 5/2023, ~88-94 subjects dosed. (Difference from May CP and final subject dosed of 34/cohort group)<br><br>
+                        - Follow-up from the point; May CP with ~ 64/cohort. This will implied; second interim of 56/cohort for 365 days before May 2024. (Note second interim may likely be after the 1-month follow-up after trial completion.)<br><br>
+
+                        ***This calculation does not include the 1:1:1:1 ratio I discussed previously. My speculation involving ratio would approximate the estimation of enrollment. Whereas, this will speculation provide the bare minimun based on the information provided. Both are valid depending on which perspective you prefer.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container my-4 access">
+        <div class="row gap-4 justify-content-center px-3">
+            <div class="card col-lg-10 col-12 p-0 text-center">
                 <div class="card-header fw-bold bg-info">Speculations</div>
                 <div class="card-body">
                     <h5 class="card-title">ASCEND Enrollment - Thoughts</h5>
@@ -321,7 +346,7 @@
                         - Based on Hepion's corporate presentations, we can somewhat estimate the enrollment progress. As per their latest presentation, they have dosed at least ~266 subjects, from the beginning of the trials to now.<br><br>
                         - With the known 70 subjects recruited for ALTITUDE, we can assume ~196 subjects were dosed from ASCEND. Given the ADME trial have never been disclosed to public, they may or may not been added to the total subjects dosed.<br><br>
                         - If we calculate, following their treatment to placebo ratio of 1:1:1:1, then the estimation of subjects currently enrolled into ASCEND is between ~253 to ~261 subjects or ~257 as average.<br><br>
-                        - This information on the CP has not been updated since roughly April/May 2023. Would speculate they are somewhat near full enrollment if not yet completed. Given DBL, they may be blinded until everything is done and due.
+                        - This information on the CP has not been updated since roughly April/May 2023. Would speculate they are somewhat near full enrollment if not yet completed. Given DBL, they may be blinded until everything is done and due. </p>
                 </div>
             </div>
         </div>
