--- a/index.html
+++ b/index.html
@@ -329,7 +329,13 @@
                         - From 12/2022 to 5/2023, ~88-94 subjects dosed. (Difference from May CP and final subject dosed of 34/cohort group)<br><br>
                         - Follow-up from the point; May CP with ~ 64/cohort. This will implied; second interim of 56/cohort for 365 days before May 2024. (Note second interim may likely be after the 1-month follow-up after trial completion.)<br><br>
 
-                        ***This calculation does not include the 1:1:1:1 ratio I discussed previously. My speculation involving ratio would approximate the estimation of enrollment. Whereas, this speculation provide the bare minimun based on the information provided. Both are valid depending on which perspective you prefer.
+                        ***This calculation does not include the 1:1:1:1 ratio I discussed previously. My speculation involving ratio would approximate the estimation of enrollment. Whereas, this speculation provide the bare minimun based on the information provided. Both are valid depending on which perspective you prefer.<br><br>
+
+                        Speculating Trial Milestone Dates:<br>
+                        11/08/23 > First Subject, Dosing Completion.<br>
+                        12/08/23 > First Subject, Trial Completion.<br>
+                        12/12/2023 > Dosing Completion, for 1/3 of subject population. 34/cohort (136 subjects).<br>
+                        1/11/2024 > Trial Completion, for 1/3 of subject population. 34/cohort (136 subjects)<br>
                     </p>
                 </div>
             </div>
