--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
     </div>
 
-    <div class="container m-4 p-4 mx-auto">
+    <!-- <div class="container m-4 p-4 mx-auto">
         <div class="row justify-content-center">
             <div class="col-6">
                 <div class="input-group mb-3">
@@ -382,7 +382,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Due Diligence -->
     <div class="dd access">
